# dbxWearables

./: .gitignore  CLAUDE.md  README.md  user-identity-todo.md
androidHealthConnect/: BUILD_AND_DISTRIBUTE.md  README.md  settings.gradle.kts
androidHealthConnect/app/: build.gradle.kts  proguard-rules.pro
androidHealthConnect/gradle/: libs.versions.toml
app/: README.md  SETUP.md
clients/androidHealthConnect/: README.md
clients/healthKit/: README.md
clients/samsungHealth/: README.md
dbxWearablesApp/dbxWearablesAppUITests/: PermissionsFlowUITests.swift
docs/: auth-architecture.md
fitbit/: README.md
garmin/: README.md  databricks.local.yml.example  schema.md
garmin/connect_iq/: README.md  manifest.xml  monkey.jungle
garmin/notebooks/: 00_garmin_login_and_test.ipynb  01_ingest_garmin.ipynb  02_backfill_garmin.ipynb  03_ingest_garmin_direct.ipynb
garmin/pull/: Makefile  README.md  config.py  extractor.py  normalizer.py  runner.py
garmin/scripts/: upload_garmin_tokens.sh
healthKit/: .gitignore  XCODE_SETUP.md  project.yml
healthKit/dbxWearablesApp.xcodeproj/: project.pbxproj
healthKit/docs/: CAMERA_PERMISSION.md  auth-architecture.md
healthKit/healthKitUITests/: MainTabFlowUITests.swift  OnboardingFlowUITests.swift
healthKit/scripts/: GenerateAppIcon.swift  generate_app_icon.py  generate_credentials_qr.py
lakeflow/: README.md  wearable_backfill_fanout.ipynb  wearable_daily_fanout.ipynb
providers/garmin/pull/: Makefile  README.md  __init__.py  extractor.py  normalizer.py  pyproject.toml  runner.py
zeroBus/: README.md  deploy.sh
(+341 files in other folders)
